--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tesseract.js": "^3.0.3"
@@ -23,6 +18,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@vitejs/plugin-react": "^2.1.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -30,7 +26,9 @@
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
+    "postcss": "^8.4.19",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.2.3",
     "typescript": "^4.8.4",
     "vite": "^3.1.0"
   }
